Add SerDe support for C# language.

--- a/native-schema-registry/c/CMakeLists.txt
+++ b/native-schema-registry/c/CMakeLists.txt
@@ -9,14 +9,15 @@ set(CMAKE_C_STANDARD 99)
 ##Global variables
 #Path to GraalVM generated shared library
 set(LIB_NATIVE_SCHEMA_REGISTRY_PATH "${PROJECT_SOURCE_DIR}/../target")
-
+set(LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME_PREFIX libnativeschemaregistry)
 ##OS Specific variables
 IF (WIN32)
-    set(LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME libnativeschemaregistry.dll)
+    set(LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME ${LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME_PREFIX}.dll)
+    set(LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_OBJ_NAME ${LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME_PREFIX}.lib)
 ELSEIF(APPLE)
-    set(LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME libnativeschemaregistry.dylib)
+    set(LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME ${LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME_PREFIX}.dylib)
 ELSE()
-    set(LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME libnativeschemaregistry.so)
+    set(LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME ${LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME_PREFIX}.so)
 ENDIF()
 
 add_subdirectory("src")
