--- a/native-schema-registry/pom.xml
+++ b/native-schema-registry/pom.xml
@@ -153,7 +153,7 @@
                                     --no-fallback
                                     --shared
                                     -g
-                                    -H:CLibraryPath=../
+                                    -H:CLibraryPath=${project.basedir}
                                 </buildArgs>
                             </buildArgs>
                         </configuration>
