--- a/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj
+++ b/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj
@@ -8,4 +8,6 @@
       <PackageReference Include="Apache.Avro" Version="1.11.0" />
     </ItemGroup>
 
+    <Import Project="..\Libs\Libs.projitems" Label="Shared" />
+
 </Project>
