--- a/native-schema-registry/c/test/CMakeLists.txt
+++ b/native-schema-registry/c/test/CMakeLists.txt
@@ -2,6 +2,10 @@ list(APPEND sanitizer_checks "-fsanitize=address,undefined -fsanitize-recover=ad
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${sanitizer_checks} -fprofile-arcs -ftest-coverage -ggdb3 -O2 -Wall")
 include(cmake/FetchCMocka.cmake)
 
+set("TEST_HELPERS" "TEST_HELPERS")
+
+add_library(${TEST_HELPERS} "glue_schema_registry_test_helper.c")
+
 list(
         APPEND
         tests
@@ -9,6 +13,7 @@ list(
         glue_schema_registry_schema_test
         read_only_byte_array_test
         mutable_byte_array_test
+        glue_schema_registry_error_test
 )
 
 foreach (test ${tests}) 
@@ -19,6 +24,7 @@ foreach (test ${tests})
     target_link_libraries(
             "${test}"
             "${DATA_TYPES_MODULE_NAME}"
+            "${TEST_HELPERS}"
             "cmocka"
     )
 
