Upgrade all kotlin dependency versions

--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,8 @@
         <jackson.version>2.12.2</jackson.version>
         <!-- Protobuf -->
         <proto-plugin.version>0.6.1</proto-plugin.version>
-        <protobuf.version>3.19.2</protobuf.version>
+	<protobuf.version>3.19.2</protobuf.version>
+	<kotlin.version>1.7.10</kotlin.version>
         <square-wireschema.version>3.7.1</square-wireschema.version>
         <apicurio-registry.version>2.1.3.Final</apicurio-registry.version>
 
