--- a/serializer-deserializer/pom.xml
+++ b/serializer-deserializer/pom.xml
@@ -109,7 +109,32 @@
 	<dependency>
 	    <groupId>org.jetbrains.kotlin</groupId>
 	    <artifactId>kotlin-stdlib</artifactId>
-	    <version>1.7.10</version>
+	    <version>${kotlin.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.jetbrains.kotlin</groupId>
+	    <artifactId>kotlin-stdlib-jdk8</artifactId>
+	    <version>${kotlin.version}</version>
+    	</dependency>
+	<dependency>
+	    <groupId>org.jetbrains.kotlin</groupId>
+	    <artifactId>kotlin-reflect</artifactId>
+	    <version>${kotlin.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.jetbrains.kotlin</groupId>
+	    <artifactId>kotlin-scripting-compiler-impl-embeddable</artifactId>
+	    <version>${kotlin.version}</version>
+    	</dependency>
+	<dependency>
+	    <groupId>org.jetbrains.kotlin</groupId>
+	    <artifactId>kotlin-scripting-compiler-embeddable</artifactId>
+	    <version>${kotlin.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.jetbrains.kotlinx</groupId>
+	    <artifactId>kotlinx-serialization-core-jvm</artifactId>
+	    <version>1.4.0</version>
 	</dependency>
 	<dependency>
             <groupId>com.squareup.wire</groupId>
