--- a/serializer-deserializer/pom.xml
+++ b/serializer-deserializer/pom.xml
@@ -106,7 +106,12 @@
             <artifactId>protobuf-java</artifactId>
             <version>${protobuf.version}</version>
         </dependency>
-        <dependency>
+	<dependency>
+	    <groupId>org.jetbrains.kotlin</groupId>
+	    <artifactId>kotlin-stdlib</artifactId>
+	    <version>1.7.10</version>
+	</dependency>
+	<dependency>
             <groupId>com.squareup.wire</groupId>
             <artifactId>wire-schema</artifactId>
             <version>${square-wireschema.version}</version>
