--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -172,6 +172,11 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
         </dependency>
+	<dependency>
+	    <groupId>javax.xml.bind</groupId>
+	    <artifactId>jaxb-api</artifactId>
+	    <version>2.3.1</version>
+    	</dependency>
         <!-- Dependency on test jar for test data -->
         <dependency>
             <groupId>software.amazon.glue</groupId>
