--- a/serializer-deserializer/pom.xml
+++ b/serializer-deserializer/pom.xml
@@ -135,6 +135,16 @@
 	    <artifactId>kotlin-scripting-compiler-embeddable</artifactId>
 	    <version>${kotlin.version}</version>
 	</dependency>
+        <dependency>
+            <groupId>com.squareup.okio</groupId>
+            <artifactId>okio</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okio</groupId>
+            <artifactId>okio-fakefilesystem</artifactId>
+            <version>3.2.0</version>
+        </dependency>
 	<dependency>
 	    <groupId>org.jetbrains.kotlinx</groupId>
 	    <artifactId>kotlinx-serialization-core-jvm</artifactId>
