add msk iam auth module

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
         <localstack.utils>0.2.11</localstack.utils>
         <protobuf.java.version>3.19.6</protobuf.java.version>
         <localstack.utils>0.2.11</localstack.utils>
+        <aws.msk.iam.auth>1.1.5</aws.msk.iam.auth>
     </properties>
 
     <dependencyManagement>
