Add a new module for Serde with msk-iam auth (#239)
* add msk iam auth module

* addressed the change requests

* add readme page

* add readme page

* add new module for serde with MSK iam

* remove the kafka connect module

* remove the kafka connect module

* Removed the redundant dependencies as per the code review

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
         <module>build-tools</module>
         <module>common</module>
         <module>serializer-deserializer</module>
+        <module>serializer-deserializer-msk-iam</module>
         <module>kafkastreams-serde</module>
         <module>avro-kafkaconnect-converter</module>
         <module>avro-flink-serde</module>
@@ -116,6 +117,7 @@
         <localstack.utils>0.2.11</localstack.utils>
         <protobuf.java.version>3.19.6</protobuf.java.version>
         <localstack.utils>0.2.11</localstack.utils>
+        <aws.msk.iam.auth>1.1.5</aws.msk.iam.auth>
     </properties>
 
     <dependencyManagement>
