Fixes #247 * Move lombok scope from compile to provided * Remove lombok-utils as it doesn't exist in newer versions anymore

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -72,6 +72,10 @@
             <version>${parent.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>kinesis</artifactId>
         </dependency>
