--- a/avro-flink-serde/pom.xml
+++ b/avro-flink-serde/pom.xml
@@ -68,6 +68,12 @@
             <artifactId>schema-registry-serde</artifactId>
             <version>1.1.15</version>
         </dependency>
+        <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.26</version>
+          <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>software.amazon.glue</groupId>
