--- a/pom.xml
+++ b/pom.xml
@@ -102,8 +102,7 @@
         <log4j.version>2.17.1</log4j.version>
         <jupiter.version>5.6.2</jupiter.version>
         <mockito.version>3.3.3</mockito.version>
-        <lombok.version>1.18.20</lombok.version>
-        <lombok.utils.version>1.18.12</lombok.utils.version>
+        <lombok.version>1.18.26</lombok.version>
         <hamcrest.version>1.1</hamcrest.version>
         <!--  LATEST KCL Does not work with LocalStack yet, remove once new version works -->
         <kinesis.client.version>2.2.9</kinesis.client.version>
@@ -236,11 +235,7 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok-utils</artifactId>
-                <version>${lombok.utils.version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.kjetland</groupId>
