--- a/.github/workflows/MavenCI.yml
+++ b/.github/workflows/MavenCI.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macos-latest]
-        java-version: ['8', '9', '11', '13']
+        java-version: ['8', '11', '17']
 
     steps:
     - uses: actions/checkout@v2
