--- a/serializer-deserializer/pom.xml
+++ b/serializer-deserializer/pom.xml
@@ -86,6 +86,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.kjetland</groupId>
