--- a/common/pom.xml
+++ b/common/pom.xml
@@ -65,6 +65,14 @@
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>glue</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>3.2.1</version>
+            <type>maven-plugin</type>
+        </dependency>
+
         <dependency>
             <groupId>${parent.groupId}</groupId>
             <artifactId>schema-registry-build-tools</artifactId>
