--- a/integration-tests/docker-compose.yml
+++ b/integration-tests/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ALLOW_ANONYMOUS_LOGIN=yes
 
   kafka:
-    image: 'public.ecr.aws/bitnami/kafka:latest'
+    image: 'public.ecr.aws/bitnami/kafka:2.8'
     ports:
       - '9092:9092'
     links:
