--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -31,7 +31,7 @@
     <parent>
         <groupId>software.amazon.glue</groupId>
         <artifactId>schema-registry-parent</artifactId>
-        <version>1.1.16</version>
+        <version>1.1.17-amzn-1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
