--- a/common/pom.xml
+++ b/common/pom.xml
@@ -76,7 +76,7 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
-            <artifactId>url-connection-client</artifactId>
+            <artifactId>apache-client</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.avro</groupId>
