--- a/serializer-deserializer/pom.xml
+++ b/serializer-deserializer/pom.xml
@@ -89,7 +89,7 @@
         </dependency>
         <dependency>
             <groupId>com.kjetland</groupId>
-            <artifactId>mbknor-jackson-jsonschema_${kafka.scala.version}</artifactId>
+            <artifactId>mbknor-jackson-jsonschema_2.12</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>io.github.classgraph</groupId>
