--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <glue.schema.registry.groupId>software.amazon.glue</glue.schema.registry.groupId>
         <aws.sdk.v2.version>2.22.12</aws.sdk.v2.version>
-        <aws.sdk.v1.version>1.12.633</aws.sdk.v1.version>
+        <aws.sdk.v1.version>1.12.660</aws.sdk.v1.version>
         <kafka.scala.version>2.12</kafka.scala.version>
         <kafka.version>3.6.1</kafka.version>
         <avro.version>1.11.3</avro.version>
@@ -115,7 +115,7 @@
         <awaitility.version>3.0.0</awaitility.version>
         <protobuf.java.version>3.19.6</protobuf.java.version>
         <localstack.utils>0.2.23</localstack.utils>
-        <aws.msk.iam.auth>1.1.5</aws.msk.iam.auth>
+        <aws.msk.iam.auth>2.0.3</aws.msk.iam.auth>
     </properties>
 
     <dependencyManagement>
@@ -284,6 +284,12 @@
                 <artifactId>amazon-kinesis-producer</artifactId>
                 <version>${kinesis.producer.version}</version>
                 <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                    <groupId>software.amazon.ion</groupId>
+                    <artifactId>ion-java</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.awaitility</groupId>
